# file-system-rcb

./: .gitignore  CMakeLists.txt  README.md  boot_record_utils.h  boot_utils.h  comunista.txt  data_structures.h  form.h  format_utils.h  generic_utils.h  main  main.c  main.x  messages.h  rcb_allocation_table.h  rcb_utils.h  reader.h  struct_utils.h  teste.odt  teste.txt  testinho.txt  writer.h
HOWTO/: pt-BR.md
